@@ -1,3 +1,7 @@
+2003-12-08  Mike Kestner  <mkestner@ximian.com>
+
+	* glue/type.c : new glue for g_signal_override_class_closure
+
 2003-12-07  Mike Kestner  <mkestner@ximian.com>
 
 	* gnome/Gnome.metadata : About ctor's logo_pixbuf is null_ok
